--- a/.github/workflows/email-notif-pipe.yml
+++ b/.github/workflows/email-notif-pipe.yml
@@ -28,7 +28,8 @@ jobs:
       - name: Send email
         uses: dawidd6/action-send-mail@v9
         with:
-          server_address: smtp.gmail.com
+        #   server_address: smtp.gmail.com
+          server_address: smtp.office365.com
           server_port: 587
           username: ${{ secrets.EMAIL_USER }}
           password: ${{ secrets.EMAIL_PASS }}
