--- a/.github/workflows/email-notif-pipe.yml
+++ b/.github/workflows/email-notif-pipe.yml
@@ -25,15 +25,34 @@ jobs:
       - name: Run script
         run: echo "Deploying to ${{ github.event.inputs.environment }}"
 
-      - name: Send email
-        uses: dawidd6/action-send-mail@v9
+    #   - name: Send email
+    #     uses: dawidd6/action-send-mail@v9
+    #     with:
+    #     #   server_address: smtp.gmail.com
+    #       server_address: smtp.office365.com
+    #       server_port: 587
+    #       username: ${{ secrets.EMAIL_USER }}
+    #       password: ${{ secrets.EMAIL_PASS }}
+    #       subject: "Pipeline Notification"
+    #       body: "The workflow has completed successfully!"
+    #       to: "automationsingh.1983@gmail.com"
+    #       from: "GitHub Actions <${{ secrets.EMAIL_USER }}>"
+      
+      - name: Send mail
+        if: always()
+        uses: dawidd6/action-send-mail@v2
         with:
-        #   server_address: smtp.gmail.com
-          server_address: smtp.office365.com
-          server_port: 587
+          # mail server settings
+          server_address: smtp.gmail.com
+          server_port: 465
+          # user credentials
           username: ${{ secrets.EMAIL_USER }}
           password: ${{ secrets.EMAIL_PASS }}
-          subject: "Pipeline Notification"
-          body: "The workflow has completed successfully!"
-          to: "automationsingh.1983@gmail.com"
+          # email subject
+          subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
+          # email body as text
+          body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
+          # comma-separated string, send email to
+          to: johndoe@gmail.com,doejohn@gmail.com
+          # from email name
           from: "GitHub Actions <${{ secrets.EMAIL_USER }}>"
