--- a/.github/workflows/email-notif-pipe.yml
+++ b/.github/workflows/email-notif-pipe.yml
@@ -42,17 +42,11 @@ jobs:
         if: always()
         uses: dawidd6/action-send-mail@v2
         with:
-          # mail server settings
           server_address: smtp.gmail.com
           server_port: 465
-          # user credentials
           username: ${{ secrets.EMAIL_USER }}
           password: ${{ secrets.EMAIL_PASS }}
-          # email subject
           subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
-          # email body as text
           body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
-          # comma-separated string, send email to
-          to: johndoe@gmail.com,doejohn@gmail.com
-          # from email name
+          to: tomhanks01@yopmail.com,automationsingh.1983@gmail.com
           from: "GitHub Actions <${{ secrets.EMAIL_USER }}>"
