--- a/.github/workflows/email-notif-pipe.yml
+++ b/.github/workflows/email-notif-pipe.yml
@@ -44,9 +44,9 @@ jobs:
         with:
           server_address: smtp.gmail.com
           server_port: 465
-          username: ${{ secrets.EMAIL_USER }}
-          password: ${{ secrets.EMAIL_PASS }}
+          username: automationsingh.1983@gmail.com
+          password: 1234#Test@1 
           subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
           body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
           to: tomhanks01@yopmail.com,automationsingh.1983@gmail.com
-          from: "GitHub Actions <${{ secrets.EMAIL_USER }}>"
+          from: automationsingh.1983@gmail.com
